vpc.yml
Description: >
    This template deploys a VPC, with a pair of public subnets and six private subnets spread
    across two Availabilty Zones. It deploys an Internet Gateway, with a default
    route on the public subnets. It deploys a pair of NAT Gateways (one in each AZ),
    and default routes for them in the private subnets.

Parameters:

    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String

    VpcCIDR:
        Description: Please enter the IP range (CIDR notation) for this VPC
        Type: String
        Default: 10.192.0.0/16

    PublicSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
        Type: String
        Default: 10.192.10.0/24

    PublicSubnet2CIDR:
        Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
        Type: String
        Default: 10.192.11.0/24

    PublicSubnet3CIDR:
        Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
        Type: String
        Default: 10.192.12.0/24

    PrivateSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation)
        Type: String
        Default: 10.192.20.0/24

    PrivateSubnet2CIDR:
        Description: Please enter the IP range (CIDR notation)
        Type: String
        Default: 10.192.21.0/24

    PrivateSubnet3CIDR:
        Description: Please enter the IP range (CIDR notation)
        Type: String
        Default: 10.192.22.0/24

Mappings:
  AWSInfoRegionMap:
    ap-northeast-1:
      SupportThirdSubnet: no
    ap-northeast-2:
      SupportThirdSubnet: no
    ap-south-1:
      SupportThirdSubnet: no
    ap-southeast-1:
      SupportThirdSubnet: no
    ap-southeast-2:
      SupportThirdSubnet: no
    ca-central-1:
      SupportThirdSubnet: no
    eu-central-1:
      SupportThirdSubnet: no
    eu-west-1:
      SupportThirdSubnet: yes
    eu-west-2:
      SupportThirdSubnet: yes
    sa-east-1:
      SupportThirdSubnet: yes
    us-east-1:
      SupportThirdSubnet: yes
    us-east-2:
      SupportThirdSubnet: no
    us-gov-west-1:
      SupportThirdSubnet: no
    us-west-1:
      SupportThirdSubnet: no
    us-west-2:
      SupportThirdSubnet: no

Conditions:
    LaunchThirdSubnet:
      !Equals
      - !FindInMap
        - AWSInfoRegionMap
        - !Ref AWS::Region
        - SupportThirdSubnet
      - yes

Resources:

    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName

    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName

    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

    PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs { Ref: "AWS::Region" } ]
            CidrBlock: !Ref PublicSubnet1CIDR
            MapPublicIpOnLaunch: true
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

    PublicSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs { Ref: "AWS::Region" } ]
            CidrBlock: !Ref PublicSubnet2CIDR
            MapPublicIpOnLaunch: true
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

    NatGateway1EIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties:
            Domain: vpc

    NatGateway2EIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties:
            Domain: vpc

    NatGateway1:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatGateway1EIP.AllocationId
            SubnetId: !Ref PublicSubnet1

    NatGateway2:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatGateway2EIP.AllocationId
            SubnetId: !Ref PublicSubnet2

    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Public Routes

    DefaultPublicRoute:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

    PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet1

    PublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet2

# --------------------------
# Private subnets (group #1)
# --------------------------

    PrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs { Ref: "AWS::Region" } ]
            CidrBlock: !Ref PrivateSubnet1CIDR
            MapPublicIpOnLaunch: false
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

    PrivateSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs { Ref: "AWS::Region" } ]
            CidrBlock: !Ref PrivateSubnet2CIDR
            MapPublicIpOnLaunch: false
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

    PrivateRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Routes (AZ1)

    DefaultPrivateRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway1

    PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            SubnetId: !Ref PrivateSubnet1

    PrivateRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Routes (AZ2)

    DefaultPrivateRoute2:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway1

    PrivateSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            SubnetId: !Ref PrivateSubnet2

# --------------------------
# Private subnets (group #2)
# --------------------------
    PrivateSubnet3:
        Type: AWS::EC2::Subnet
        Condition: LaunchThirdSubnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 2, !GetAZs { Ref: "AWS::Region" } ]
            CidrBlock: !Ref PrivateSubnet3CIDR
            MapPublicIpOnLaunch: false
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ3)

    PrivateRouteTable3:
        Type: AWS::EC2::RouteTable
        Condition: LaunchThirdSubnet
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Routes (AZ3)

    DefaultPrivateRoute3:
        Type: AWS::EC2::Route
        Condition: LaunchThirdSubnet
        Properties:
            RouteTableId: !Ref PrivateRouteTable3
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway2

    PrivateSubnet3RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Condition: LaunchThirdSubnet
        Properties:
            RouteTableId: !Ref PrivateRouteTable3
            SubnetId: !Ref PrivateSubnet3

# --------------------------
# Public subnets (group #2)
# --------------------------
    PublicSubnet3:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 2, !GetAZs { Ref: "AWS::Region" } ]
            CidrBlock: !Ref PublicSubnet3CIDR
            MapPublicIpOnLaunch: true
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ3)

    PublicSubnet3RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet3
# ----------------------
# VPC Peering connection
# ----------------------

    VPCPeeringConnection:
        Type: AWS::EC2::VPCPeeringConnection
        Properties:
            VpcId: !Ref VPC
            PeerVpcId:
                Fn::ImportValue: MANAGEMENT-VPC-ID
            Tags:
              - Key: Name
                Value: vpc-peer-production-management
              - Key: Environment
                Value: !Ref EnvironmentName
    PeeringMangamentPrivateRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId:
                Fn::ImportValue: MANAGEMENT-PRIVATE-ROUTE-TABLE
            VpcPeeringConnectionId: !Ref VPCPeeringConnection
            DestinationCidrBlock: !Ref VpcCIDR
    PeeringMangamentPublicRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId:
                Fn::ImportValue: MANAGEMENT-PUBLIC-ROUTE-TABLE
            VpcPeeringConnectionId: !Ref VPCPeeringConnection
            DestinationCidrBlock: !Ref VpcCIDR
    PeeringPrivateRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            VpcPeeringConnectionId: !Ref VPCPeeringConnection
            DestinationCidrBlock:
                Fn::ImportValue:  MANAGEMENT-VPC-CIDRD
    PeeringPrivateRoute2:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            VpcPeeringConnectionId: !Ref VPCPeeringConnection
            DestinationCidrBlock:
                Fn::ImportValue:  MANAGEMENT-VPC-CIDRD
    PeeringPrivateRoute3:
        Type: AWS::EC2::Route
        Condition: LaunchThirdSubnet
        Properties:
            RouteTableId: !Ref PrivateRouteTable3
            VpcPeeringConnectionId: !Ref VPCPeeringConnection
            DestinationCidrBlock:
                Fn::ImportValue:  MANAGEMENT-VPC-CIDRD
    PeeringPublicRoute:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PublicRouteTable
            VpcPeeringConnectionId: !Ref VPCPeeringConnection
            DestinationCidrBlock:
                Fn::ImportValue:  MANAGEMENT-VPC-CIDRD

Outputs:

    VPC:
        Description: A reference to the created VPC
        Value: !Ref VPC

    PublicSubnets:
        Description: A list of the public subnets
        Value: !If [LaunchThirdSubnet,  !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2, !Ref PublicSubnet3 ]] , !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]] ]

    PrivateSubnets:
        Description: A list of the private subnets
        Value:  !If [LaunchThirdSubnet,  !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2, !Ref PrivateSubnet3 ]] , !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]] ]

    PublicSubnet1:
        Description: A reference to the public subnet in the 1st Availability Zone
        Value: !Ref PublicSubnet1

    PublicSubnet2:
        Description: A reference to the public subnet in the 2nd Availability Zone
        Value: !Ref PublicSubnet2

    PrivateSubnet1:
        Description: Reference to private subnet 1
        Value: !Ref PrivateSubnet1

    PrivateSubnet2:
        Description: Reference to private subnet 2
        Value: !Ref PrivateSubnet2
